--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<p>An online showcase of a collection of City photographs by various artists..</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://nairobitoday.netlify.app/" class="image fit thumb"><img src="images/fulls/news.png" alt="" /></a>
+								<a href="images/fulls/news.png " class="image fit thumb"><img src="images/fulls/news.png" alt="" /></a>
 								<h3>News Website</h3>
 								<p>Fully responsive News websie with different Categories.</p>
 							</article>
