--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/news.png " class="image fit thumb"><img src="images/fulls/news.png" alt="" /></a>
-								<h3>News Website</h3>
+								<h3><a href="https://nairobitoday.netlify.app/ ">News Website</a></h3>
 								<p>Fully responsive News websie with different Categories.</p>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
