--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 								<p>A fully responsive, beautiful, and modern website for an on trend full-service salon..</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/news.png" class="image fit thumb"><img src="images/fulls/news.png" alt="" /></a>
-								<h3>Agency Website</h3>
-								<p>Fun and color take charge for this local party entertainer's portfolio site.</p>
+								<a href="images/news.png" class="image fit thumb"><img src="images/fulls/rest.png" alt="" /></a>
+								<h3>Resturant Website</h3>
+								<p>Nice and Beatiful simple resturant website with menu where customers can make order.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/gal.png" class="image fit thumb"><img src="images/gal.png" alt="" /></a>
